force-app/main/default/objects/Opportunity__c/Opportunity__c.object-meta.xml
<CustomObject>
    <label>Product Information</label>
    <nameField>
        <displayFormat>Prd-{000000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>