force-app/main/default/objects/Opportunity__c/fields/Achivement__c.field-meta.xml
<CustomField>
    <fullName>Achivement__c</fullName>
    <formula>Pondliner_Size_Requested_Required_Sq_Mt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achivement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>