force-app/main/default/objects/Opportunity__c/fields/Achivement_Updated__c.field-meta.xml
<CustomField>
    <fullName>Achivement_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Achivement Updated</label>
    <type>Checkbox</type>
</CustomField>