force-app/main/default/objects/Opportunity__c/fields/Address_Landmark__c.field-meta.xml
<CustomField>
    <fullName>Address_Landmark__c</fullName>
    <label>Address Landmark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>