force-app/main/default/objects/Opportunity__c/fields/At_Post_Village__c.field-meta.xml
<CustomField>
    <fullName>At_Post_Village__c</fullName>
    <label>At-Post / Village</label>
    <length>255</length>
    <type>Text</type>
</CustomField>