force-app/main/default/objects/Opportunity__c/fields/Bundle_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Numbers__c</fullName>
    <label>Bundle Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>