force-app/main/default/objects/Opportunity__c/fields/Certificate_Valid_Till__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Valid_Till__c</fullName>
    <description>Calculate Warranty Date From Invoice Date</description>
    <formula>CASE( Pondliner_Variant__c ,
 &apos;300 Microns&apos;,  ADDMONTHS( Invoice_Date__c  ,36) ,
 &apos;500 Microns&apos;,  ADDMONTHS( Invoice_Date__c  ,60) ,
null)</formula>
    <label>Certificate Valid Till</label>
    <type>Date</type>
</CustomField>