force-app/main/default/objects/Opportunity__c/fields/Coating_Invoice_Price__c.field-meta.xml
<CustomField>
    <fullName>Coating_Invoice_Price__c</fullName>
    <description>Super Coating price to be mentioned on Invoice</description>
    <inlineHelpText>Super Coating price to be mentioned on Invoice</inlineHelpText>
    <label>Coating Invoice Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>