force-app/main/default/objects/Opportunity__c/fields/Commercial_Documents_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Documents_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick this box after you have uploaded documents such as Invoice, Test Certificate, etc.</description>
    <label>Commercial Documents Uploaded</label>
    <type>Checkbox</type>
</CustomField>