force-app/main/default/objects/Opportunity__c/fields/Competitor_price_per_sq_m__c.field-meta.xml
<CustomField>
    <fullName>Competitor_price_per_sq_m__c</fullName>
    <label>Competitor price per sq m</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>