force-app/main/default/objects/Opportunity__c/fields/CRM_Call_Date_2__c.field-meta.xml
<CustomField>
    <fullName>CRM_Call_Date_2__c</fullName>
    <label>CRM Call Date 2</label>
    <type>Date</type>
</CustomField>