force-app/main/default/objects/Opportunity__c/fields/CRM_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Call_Date__c</fullName>
    <label>CRM Call Date 1</label>
    <type>Date</type>
</CustomField>