force-app/main/default/objects/Opportunity__c/fields/CRM_Call_Farmer_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>CRM_Call_Farmer_Satisfied__c</fullName>
    <label>CRM Call Farmer Satisfied</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>