force-app/main/default/objects/Opportunity__c/fields/CRM_Call_Unreachable_1__c.field-meta.xml
<CustomField>
    <fullName>CRM_Call_Unreachable_1__c</fullName>
    <description>If the CRM team has placed the call but it is not reachable for some reason, then this field should be filled out.</description>
    <label>CRM Call Unreachable 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not answered</fullName>
            </value>
            <value>
                <fullName>Out of network coverage</fullName>
            </value>
            <value>
                <fullName>Phone switched off</fullName>
            </value>
            <value>
                <fullName>Invalid number</fullName>
            </value>
            <value>
                <fullName>Incoming Service Barred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>