force-app/main/default/objects/Opportunity__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Dealer__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Dealer__c</referenceTo>
    <relationshipLabel>Product Information</relationshipLabel>
    <relationshipName>Enquiry</relationshipName>
    <type>Lookup</type>
</CustomField>