force-app/main/default/objects/Opportunity__c/fields/Dealer_with_Tehsil__c.field-meta.xml
<CustomField>
    <fullName>Dealer_with_Tehsil__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer with Tehsil</label>
    <referenceTo>Dealer_with_Tehsil__c</referenceTo>
    <relationshipLabel>Product Information</relationshipLabel>
    <relationshipName>Product_Information</relationshipName>
    <type>Lookup</type>
</CustomField>