force-app/main/default/objects/Opportunity__c/fields/Dispatch_Detail__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispatch Detail</label>
    <referenceTo>Dispatch__c</referenceTo>
    <relationshipLabel>Product Information</relationshipLabel>
    <relationshipName>Product_Information</relationshipName>
    <type>Lookup</type>
</CustomField>