force-app/main/default/objects/Opportunity__c/fields/Dispatch_From_new__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_From_new__c</fullName>
    <description>This is new Dispatch From Field (Created for automation on the basis of Invoice Number)</description>
    <formula>IF( LEFT(Invoice_Number__c ,3 )= &apos;AV1&apos;, &quot;Silvassa Factory&quot;,
IF( LEFT(Invoice_Number__c ,3 )= &apos;AV2&apos; ,&quot;Aurangabad(MH) Warehouse&quot;,
IF( LEFT(Invoice_Number__c ,3 )= &apos;AV3&apos; ,&quot;Sri Ganganagar(RJ) Warehouse&quot;,
IF( LEFT(Invoice_Number__c ,3 )= &apos;AV4&apos; ,&quot;Nashik(MH) Warehouse&quot;,
IF( LEFT(Invoice_Number__c ,3 )= &apos;AV5&apos; ,&quot;Pune(MH) Warehouse&quot;,
NULL)))))</formula>
    <label>Dispatch From</label>
    <type>Text</type>
</CustomField>