force-app/main/default/objects/Opportunity__c/fields/Dispatch_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Invoice_Date__c</fullName>
    <formula>Dispatch_Detail__r.Dispatch_Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispatch Invoice Date</label>
    <type>Date</type>
</CustomField>