force-app/main/default/objects/Opportunity__c/fields/Dispatched_From__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_From__c</fullName>
    <label>Dispatched From(old)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silvassa Factory</fullName>
            </value>
            <value>
                <fullName>Aurangabad (MH) Warehouse</fullName>
            </value>
            <value>
                <fullName>Nashik (MH) Warehouse</fullName>
            </value>
            <value>
                <fullName>Sri Ganganagar (RJ) Warehouse</fullName>
            </value>
            <value>
                <fullName>Pune (MH) Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>