force-app/main/default/objects/Opportunity__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <formula>Dealer__r.Distributor__r.Name</formula>
    <label>Distributor</label>
    <type>Text</type>
</CustomField>