force-app/main/default/objects/Opportunity__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <formula>Lead__r.District__c</formula>
    <label>District</label>
    <type>Text</type>
</CustomField>