force-app/main/default/objects/Opportunity__c/fields/Farmer_feedback__c.field-meta.xml
<CustomField>
    <fullName>Farmer_feedback__c</fullName>
    <label>Farmer feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Not Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>