force-app/main/default/objects/Opportunity__c/fields/Farmer_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Farmer_Mobile_Number__c</fullName>
    <formula>Lead__r.Mobile_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Farmer Mobile Number</label>
    <type>Text</type>
</CustomField>