force-app/main/default/objects/Opportunity__c/fields/Farmer_Name__c.field-meta.xml
<CustomField>
    <fullName>Farmer_Name__c</fullName>
    <formula>Lead__r.Farmer_First_Name__c</formula>
    <label>Farmer Name</label>
    <type>Text</type>
</CustomField>