force-app/main/default/objects/Opportunity__c/fields/Installation_Invoice_Price__c.field-meta.xml
<CustomField>
    <fullName>Installation_Invoice_Price__c</fullName>
    <description>If Installation invoice is to be made, the price that should be mentioned.</description>
    <label>Installation Invoice Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>