force-app/main/default/objects/Opportunity__c/fields/Interest_Level_after_visit__c.field-meta.xml
<CustomField>
    <fullName>Interest_Level_after_visit__c</fullName>
    <label>Interest Level (after visit)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive Feedback</fullName>
            </value>
            <value>
                <fullName>Rate Negotiation</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>