force-app/main/default/objects/Opportunity__c/fields/Invoice_done__c.field-meta.xml
<CustomField>
    <fullName>Invoice_done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice done</label>
    <type>Checkbox</type>
</CustomField>