force-app/main/default/objects/Opportunity__c/fields/Jalasanchay_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Jalasanchay_Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jalasanchay</fullName>
            </value>
            <value>
                <fullName>Jalasanchay Super</fullName>
            </value>
            <value>
                <fullName>Samruddhi 300</fullName>
                <label>Jalasanchay 300</label>
            </value>
            <value>
                <fullName>Jalasanchay 300 Super</fullName>
            </value>
            <value>
                <fullName>Samruddhi 400</fullName>
            </value>
            <value>
                <fullName>Perco Plus</fullName>
            </value>
            <value>
                <fullName>Jalasanchay 750</fullName>
            </value>
            <value>
                <fullName>Jalasanchay 1000</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Bio Flocking Tank (Dia 4m x Ht 1.5m)</fullName>
                <label>Biofloc Tank Liner (Dia 4m x Ht 1.5m)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>