force-app/main/default/objects/Opportunity__c/fields/Material_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Material_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Information Updated</label>
    <type>Checkbox</type>
</CustomField>