force-app/main/default/objects/Opportunity__c/fields/Material_Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Material_Dispatch_Date__c</fullName>
    <label>Material Dispatch Date</label>
    <type>Date</type>
</CustomField>