force-app/main/default/objects/Opportunity__c/fields/Microns__c.field-meta.xml
<CustomField>
    <fullName>Microns__c</fullName>
    <label>Microns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>