force-app/main/default/objects/Opportunity__c/fields/Minimum_Required_Rate__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Required_Rate__c</fullName>
    <label>Minimum Required Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>