force-app/main/default/objects/Opportunity__c/fields/Monthly_Target__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Target__c</fullName>
    <formula>CreatedBy.Monthly_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>