force-app/main/default/objects/Opportunity__c/fields/Murugas_Bag_Size__c.field-meta.xml
<CustomField>
    <fullName>Murugas_Bag_Size__c</fullName>
    <label>Murughas Bag Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>