force-app/main/default/objects/Opportunity__c/fields/Murughas_Bag_Qty__c.field-meta.xml
<CustomField>
    <fullName>Murughas_Bag_Qty__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>