force-app/main/default/objects/Opportunity__c/fields/Murughas_Bag_Weight__c.field-meta.xml
<CustomField>
    <fullName>Murughas_Bag_Weight__c</fullName>
    <label>Murughas Bag Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>