force-app/main/default/objects/Opportunity__c/fields/Name_of_Operator__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Jalasanchay_Installation_Operators</valueSetName>
    </valueSet>
</CustomField>