force-app/main/default/objects/Opportunity__c/fields/no_warranty__c.field-meta.xml
<CustomField>
    <fullName>no_warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Usually used in Rajasthan. For Samruddhi fabric that is sold without warranty. Please tick this if there is no warranty for this pond.</inlineHelpText>
    <label>Sold with no warranty (Only Samruddhi)</label>
    <type>Checkbox</type>
</CustomField>