force-app/main/default/objects/Opportunity__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>