force-app/main/default/objects/Opportunity__c/fields/Opportunity_Lost_to__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lost_to__c</fullName>
    <label>Sale Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price too high</fullName>
            </value>
            <value>
                <fullName>Bad review of product</fullName>
            </value>
            <value>
                <fullName>Delivery time too long</fullName>
            </value>
            <value>
                <fullName>Bad reputation of dealer/distributor</fullName>
            </value>
            <value>
                <fullName>Wanted to buy on credit</fullName>
            </value>
            <value>
                <fullName>Already lined with different company</fullName>
            </value>
            <value>
                <fullName>Not available in area</fullName>
            </value>
            <value>
                <fullName>Not available with preferred retailer</fullName>
            </value>
            <value>
                <fullName>Subsidy not coming on time</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>