force-app/main/default/objects/Opportunity__c/fields/Other_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Lost_Reason__c</fullName>
    <inlineHelpText>Fill when Lost Reason selected &apos;Other&apos;</inlineHelpText>
    <label>Other Lost Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>