force-app/main/default/objects/Opportunity__c/fields/Payment_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_Amount__c</fullName>
    <label>Payment Received Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>