force-app/main/default/objects/Opportunity__c/fields/Pond_Liner_Invoice_Price__c.field-meta.xml
<CustomField>
    <fullName>Pond_Liner_Invoice_Price__c</fullName>
    <description>Price of pond liner to mention on invoice. Not including Super coating or Installation price.</description>
    <inlineHelpText>Price of pond liner to mention on invoice. Not including Super coating or Installation price.</inlineHelpText>
    <label>Pond Liner Invoice Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>