force-app/main/default/objects/Opportunity__c/fields/Pond_Size_Sq_Mtr__c.field-meta.xml
<CustomField>
    <fullName>Pond_Size_Sq_Mtr__c</fullName>
    <label>Size of the Pond(length x width x depth)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>