force-app/main/default/objects/Opportunity__c/fields/Pondliner_Size_Requested_Required_Sq_Mt__c.field-meta.xml
<CustomField>
    <fullName>Pondliner_Size_Requested_Required_Sq_Mt__c</fullName>
    <label>Qty(In sq m)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>