force-app/main/default/objects/Opportunity__c/fields/Pondliner_Variant__c.field-meta.xml
<CustomField>
    <fullName>Pondliner_Variant__c</fullName>
    <label>Pondliner Variant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>300 Microns</fullName>
            </value>
            <value>
                <fullName>500 Microns</fullName>
            </value>
            <value>
                <fullName>750 Microns</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>