force-app/main/default/objects/Opportunity__c/fields/Post_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Visit_Date__c</fullName>
    <label>Quality Visit Date</label>
    <type>Date</type>
</CustomField>