force-app/main/default/objects/Opportunity__c/fields/Post_Visit_Done_By__c.field-meta.xml
<CustomField>
    <fullName>Post_Visit_Done_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Visit Done By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enquiry2</relationshipName>
    <type>Lookup</type>
</CustomField>