force-app/main/default/objects/Opportunity__c/fields/Post_Visit_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Post_Visit_Remarks__c</fullName>
    <label>Quality Visit Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>