force-app/main/default/objects/Opportunity__c/fields/Pre_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Visit_Date__c</fullName>
    <label>Pre Visit Date</label>
    <type>Date</type>
</CustomField>