force-app/main/default/objects/Opportunity__c/fields/Pre_Visit_Done_By__c.field-meta.xml
<CustomField>
    <fullName>Pre_Visit_Done_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre Visit Done By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enquiry1</relationshipName>
    <type>Lookup</type>
</CustomField>