force-app/main/default/objects/Opportunity__c/fields/Pre_Visit_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Pre_Visit_Remarks__c</fullName>
    <label>Pre Visit Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>