force-app/main/default/objects/Opportunity__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Product Information</relationshipLabel>
    <relationshipName>Product_Information</relationshipName>
    <type>Lookup</type>
</CustomField>