force-app/main/default/objects/Opportunity__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Old Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jalasanchay</fullName>
            </value>
            <value>
                <fullName>Jalasanchay Super</fullName>
            </value>
            <value>
                <fullName>Samruddhi 300</fullName>
            </value>
            <value>
                <fullName>Samruddhi 400</fullName>
            </value>
            <value>
                <fullName>Full bag</fullName>
            </value>
            <value>
                <fullName>Liner</fullName>
            </value>
            <value>
                <fullName>Perco Plus</fullName>
            </value>
            <value>
                <fullName>Jalasanchay 750</fullName>
            </value>
            <value>
                <fullName>Jalasanchay 1000</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>500L</fullName>
            </value>
            <value>
                <fullName>750L</fullName>
            </value>
            <value>
                <fullName>1000L</fullName>
            </value>
            <value>
                <fullName>Blue 4000 denier</fullName>
            </value>
            <value>
                <fullName>White 4000 denier</fullName>
            </value>
            <value>
                <fullName>Waterproof Sutli (Brown 5000 denier)</fullName>
            </value>
            <value>
                <fullName>140 GSM</fullName>
            </value>
            <value>
                <fullName>220 GSM</fullName>
            </value>
            <value>
                <fullName>370 GSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>