force-app/main/default/objects/Opportunity__c/fields/Product_Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Sold_Date__c</fullName>
    <label>Product Sold Date</label>
    <type>Date</type>
</CustomField>