force-app/main/default/objects/Opportunity__c/fields/Qty_kg__c.field-meta.xml
<CustomField>
    <fullName>Qty_kg__c</fullName>
    <description>This Field for Prabal farmimg thread</description>
    <label>Qty (kg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>