force-app/main/default/objects/Opportunity__c/fields/Qty_no_of_cut_pieces__c.field-meta.xml
<CustomField>
    <fullName>Qty_no_of_cut_pieces__c</fullName>
    <description>This field for rakshak tarpaulin</description>
    <label>Qty (Kg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>