force-app/main/default/objects/Opportunity__c/fields/Qty_no_of_tanks__c.field-meta.xml
<CustomField>
    <fullName>Qty_no_of_tanks__c</fullName>
    <description>This field for SarvaGuni</description>
    <label>Qty (no. of tanks)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>