force-app/main/default/objects/Opportunity__c/fields/Quality_person__c.field-meta.xml
<CustomField>
    <fullName>Quality_person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Inspector</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enquiry</relationshipName>
    <type>Lookup</type>
</CustomField>