force-app/main/default/objects/Opportunity__c/fields/Quotation_Given__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quotation Given?</label>
    <type>Checkbox</type>
</CustomField>