force-app/main/default/objects/Opportunity__c/fields/Retail_Product__c.field-meta.xml
<CustomField>
    <fullName>Retail_Product__c</fullName>
    <label>Retail Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Avana Tank</fullName>
            </value>
            <value>
                <fullName>Kapila Murughas Bag</fullName>
            </value>
            <value>
                <fullName>Rakshak Tarpaulin</fullName>
            </value>
            <value>
                <fullName>Prabal Thread</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>