force-app/main/default/objects/Opportunity__c/fields/Retail_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Retail_Product_Type__c</fullName>
    <label>Retail Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Retail_Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Full bag</fullName>
            </value>
            <value>
                <fullName>Liner</fullName>
            </value>
            <value>
                <fullName>140 GSM</fullName>
            </value>
            <value>
                <fullName>220 GSM</fullName>
            </value>
            <value>
                <fullName>370 GSM</fullName>
            </value>
            <value>
                <fullName>Blue 4000 denier</fullName>
            </value>
            <value>
                <fullName>White 4000 denier</fullName>
            </value>
            <value>
                <fullName>Waterproof Sutli (Brown 5000 denier)</fullName>
            </value>
            <value>
                <fullName>500L</fullName>
            </value>
            <value>
                <fullName>750L</fullName>
            </value>
            <value>
                <fullName>1000L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>