force-app/main/default/objects/Opportunity__c/fields/Sale_lost_to_which_competitor__c.field-meta.xml
<CustomField>
    <fullName>Sale_lost_to_which_competitor__c</fullName>
    <label>Sale lost to which competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>