force-app/main/default/objects/Opportunity__c/fields/Tehsil__c.field-meta.xml
<CustomField>
    <fullName>Tehsil__c</fullName>
    <formula>Lead__r.Tehsil__r.Name</formula>
    <label>Tehsil</label>
    <type>Text</type>
</CustomField>