force-app/main/default/objects/Opportunity__c/fields/Tehsil_Name__c.field-meta.xml
<CustomField>
    <fullName>Tehsil_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tehsil Name</label>
    <referenceTo>Tehsil__c</referenceTo>
    <relationshipLabel>Product Information</relationshipLabel>
    <relationshipName>Product_Information</relationshipName>
    <type>Lookup</type>
</CustomField>