force-app/main/default/objects/Opportunity__c/fields/Tentative_Order_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Order_Confirmation_Date__c</fullName>
    <description>For Field Visit</description>
    <label>Tentative Order Confirmation Date</label>
    <type>Date</type>
</CustomField>