force-app/main/default/objects/Opportunity__c/fields/Test_Report_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Test_Report_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Report Uploaded</label>
    <type>Checkbox</type>
</CustomField>