force-app/main/default/objects/Opportunity__c/fields/Visit_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Visit_Remarks__c</fullName>
    <label>Visit Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>