force-app/main/default/objects/Opportunity__c/fields/Warranty_Card_Issued__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Card_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be ticked if the warranty card has been made and sent.</description>
    <label>Warranty Card Issued</label>
    <type>Checkbox</type>
</CustomField>